--- a/node.css
+++ b/node.css
@@ -6,14 +6,15 @@
 
 .node
  {
-    width: 9%;
+   /* width: 9%;*/
     bottom: 50px;
+    height:30px;
     position: absolute;
     /*background-color: yellow;*/
     /*opacity: 0.4;*/
     border : 3px solid black;
     text-align: center;
-    padding: 10px;
+    padding: 3px;
     
     
  }
@@ -21,7 +22,6 @@
 .wood
  {
     width: 90%;
-   
     bottom: 0px;
     position:absolute;
     
